fix error on ios app

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3881,8 +3881,8 @@ body.body_fz_18 {
   text-align: center;
   white-space: nowrap;
   vertical-align: middle;
-  /* -ms-touch-action: manipulation;
-  touch-action: manipulation; */
+  -ms-touch-action: manipulation;
+  touch-action: manipulation;
   cursor: pointer;
   -webkit-user-select: none;
   -moz-user-select: none;
